# LittleBigGame

./: CMakeLists.txt  New-tileset-Mario.xcf  README.md  input.cpp  input.h  lvl1.tmx  lvl1.txt  main.cpp  main.h  map.cpp  map.h
Controller/: GameEngine.cpp  GameEngine.hh
Controller/InputController/: HandlerInput.cpp  HandlerInput.hh  Input.cpp  Input.hh  LeftInput.cpp  LeftInput.hh  RightInput.cpp  RightInput.hh  UpInput.cpp  UpInput.hh
Models/: Character.cpp  MonsterFactory.cpp  PlayerAnimation.hh  PlayerSprite.cpp  TileMap.cpp  TileMap.hh  ZombieMonster.hh
Models/NotUseAtThisPoint/: Camera.cpp  Character.hh  IObservable.hh  IObserver.hh  SprinterMonster.hh  TimeManager.cpp  ZombieMonster.cpp
Objects/: AbstractEntity.cpp  AbstractEntity.hh  Camera.hh  Character.hh  MonsterFactory.hh  Player.cpp  Player.hh  PlayerAnimation.cpp  PlayerSprite.cpp  PlayerSprite.hh  SprinterMonster.cpp  TileMap.cpp  TileMap.hh  TimeManager.hh
assets/tmx/: lvl1.tmx
lib/: Findtmxparser.cmake
